--- a/content/resources/11-329f05.md
+++ b/content/resources/11-329f05.md
@@ -3,7 +3,7 @@ content_type: resource
 description: The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates
   one way that communities tie their identities to urban spaces. (Image courtesy of
   Annis Whitlow.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-329-social-theory-and-the-city-fall-2005/bb7d1d0fe6263cb9a88300e67466c905_11-329f05.jpg
+file: /media/courses/11-329-social-theory-and-the-city-fall-2005/bb7d1d0fe6263cb9a88300e67466c905_11-329f05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates
@@ -11,6 +11,8 @@ image_metadata:
     of Annis Whitlow.)
   credit: ''
   image-alt: Philadelphia Odunde Festival, 2004.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 11-329f05.jpg
 uid: bb7d1d0f-e626-3cb9-a883-00e67466c905
