Sync all content

--- a/content/resources/11-329f05-th.md
+++ b/content/resources/11-329f05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/11-329-social-theory-and-the-city-fall-2005/dc74389992e6f67a286dc4f9fb4cba4e_11-329f05-th.jpg
+file: /courses/11-329-social-theory-and-the-city-fall-2005/dc74389992e6f67a286dc4f9fb4cba4e_11-329f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 11-329f05-th.jpg
 uid: dc743899-92e6-f67a-286d-c4f9fb4cba4e
 ---
+New image Upload
+
