Sync all content

--- a/content/resources/11-329f05.md
+++ b/content/resources/11-329f05.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: Philadelphia Odunde Festival, 2004.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-329f05.jpg
 uid: bb7d1d0f-e626-3cb9-a883-00e67466c905
 ---
 The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates one way that communities tie their identities to urban spaces. (Image courtesy of Annis Whitlow.)
-
