--- a/content/resources/11-329f05-th.md
+++ b/content/resources/11-329f05-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Philadelphia Odunde Festival, 2004.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-329f05-th.jpg
 uid: dc743899-92e6-f67a-286d-c4f9fb4cba4e
 ---
 New image Upload
-
