--- a/content/resources/11-329f05-th.md
+++ b/content/resources/11-329f05-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/11-329-social-theory-and-the-city-fall-2005/dc74389992e6f67a286dc4f9fb4cba4e_11-329f05-th.jpg
+file_size: 39008
 file_type: image/jpeg
 image_metadata:
   caption: The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates
