--- a/content/resources/11-329f05.md
+++ b/content/resources/11-329f05.md
@@ -4,6 +4,7 @@ description: The 2004 Odunde Festival on South Street in Philadelphia, PA illust
   one way that communities tie their identities to urban spaces. (Image courtesy of
   Annis Whitlow.)
 file: /courses/11-329-social-theory-and-the-city-fall-2005/bb7d1d0fe6263cb9a88300e67466c905_11-329f05.jpg
+file_size: 145175
 file_type: image/jpeg
 image_metadata:
   caption: The 2004 Odunde Festival on South Street in Philadelphia, PA illustrates
